fix: 🐛 no preview model layout shift in grid
I

--- a/app/assets/stylesheets/models.scss
+++ b/app/assets/stylesheets/models.scss
@@ -12,8 +12,8 @@
   }
 }
 
-.form-check-label{
-  input.checkbox{
+.form-check-label {
+  input.checkbox {
     margin-right: 0.25em;
   }
 }
@@ -23,3 +23,70 @@ div.form-control.tag-container {
   padding: 0;
 }
 
+.model-card {
+  min-height: 100%;
+
+  .image-preview {
+    min-width: 100%;
+  }
+
+  .preview-empty {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1;
+    border-bottom:solid 2px #fbfbfb;
+    text-transform: capitalize;
+    font-size: .75rem;
+
+    p{
+      position: absolute;
+      padding: 0;
+      margin-block-end: 0;
+      text-align: center;
+      z-index: 50;
+      font-weight: 500;
+    }
+
+    &::before,&::after {
+      content: '';
+      position: absolute;
+      top: -20%;
+      left: 50%;
+      width: 1px;
+      height: 140%;
+      background-color: #333;
+      transform: rotate(45deg);
+      border-radius: 1px;
+      opacity: .08;
+    }
+&::after {
+  transform: rotate(-45deg);
+}
+
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    max-height: fit-content;
+    gap: 0.5rem;
+    justify-content: space-between;
+  }
+
+  .card-title {
+    margin-bottom: 0;
+  }
+
+  .btn {
+    width: fit-content;
+    height: fit-content;
+  }
+
+  small {
+    text-transform: capitalize;
+    font-size: 0.8rem;
+  }
+}
